--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,23 +27,14 @@
      <string>&amp;Open</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>1</x>
-      <y>34</y>
-      <width>411</width>
-      <height>251</height>
+      <x>10</x>
+      <y>60</y>
+      <width>256</width>
+      <height>192</height>
      </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="text">
-     <string/>
     </property>
    </widget>
   </widget>
