--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,23 +18,49 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>0</y>
       <width>93</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>&amp;Open</string>
+     <string>打开目录</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
-      <width>256</width>
-      <height>192</height>
+      <y>30</y>
+      <width>311</width>
+      <height>361</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_histogram">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>0</y>
+      <width>114</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>直方图检错</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>0</y>
+      <width>114</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>目标识别</string>
     </property>
    </widget>
   </widget>
