--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,7 +33,7 @@
       <x>10</x>
       <y>30</y>
       <width>311</width>
-      <height>361</height>
+      <height>311</height>
      </rect>
     </property>
    </widget>
@@ -69,8 +69,31 @@
       <x>340</x>
       <y>30</y>
       <width>241</width>
-      <height>361</height>
+      <height>311</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowserResult">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>370</y>
+      <width>581</width>
+      <height>121</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>350</y>
+      <width>62</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Result:</string>
     </property>
    </widget>
   </widget>
